# cloud-monorepo

./: .gitignore  .identifiers.local.example  CLAUDE.md  Makefile  README.md  architecture.md  decisions-log.md  pyproject.toml  pytest.ini
.claude/skills/onboard-amazon-seller/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  clarification.md  config.yml  workstream.md
.github/workflows/: ci.yml
docs/architecture/: 00-overview.md  01-organizations.md  02-amazon-runtime.md  03-iac-topology.md  04-secrets-and-auth.md
docs/design/: cost-minimization-review.md  credential-rotation.md  reporting-and-feeds-automation.md
docs/handoffs/: README.md  amazon-prod-cutover.md  credential-rotation-smoke-test.md  datakiosk_query_finished_webhook.md  feed_processing_finished_webhook.md  feed_relay_extend_sh_73j_oh.md
events/: report_ready.json  request_report.json  request_report_73j.json  request_report_co.json  request_report_kk.json  request_report_llg.json  request_report_oh.json
infrastructure/: base-stack.yaml
infrastructure/org-setup/: README.md  deployment-role.yaml  permission-set-developer-access.json  scp-protect-cloudtrail.json  scp-protect-production-secrets.json  scp-region-lockdown.json
scripts/: build_cfn_params.py  migrate_secret_layout.py  sp_api_notifications.py
shared/: pyproject.toml
shared/src/sincerelyhers_shared/: __init__.py
