[project]
name = "cloud-monorepo"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = []

[tool.uv.workspace]
members = [
    "shared",
    "platforms/amazon",
    "platforms/walmart",
    "platforms/shopify",
    "platforms/target",
    "platforms/faire",
]

[dependency-groups]
dev = [
    "moto[dynamodb,secretsmanager]>=5.1.22",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.11",
]
